--- a/templates/customer_list.html
+++ b/templates/customer_list.html
@@ -6,6 +6,14 @@
 
 <h1>Customers</h1>
 
+<div class="input-group rounded">
+  <input type="search" class="form-control rounded" placeholder="Search for Customer" aria-label="Search"
+    aria-describedby="search-addon" />
+  <span class="input-group-text border-0" id="search-addon">
+    <i class="fas fa-search"></i>
+  </span>
+</div>
+
 <ul style="column-count: 4">
   {% for customer in customers %}
   <li><a href="/{{ customer.id }}/">{{ customer.fullName }}</a></li>
